src/test/ui/feature-gates/feature-gate-fundamental.rs
#[fundamental] //~ ERROR the `#[fundamental]` attribute is an experimental feature
struct Fundamental;

fn main() { }
